--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Run Buddy</title>
   </head>  
   <body>
-      <h2> RUN Buddy</h2>
-      What We Do 👺
+      <h1> RUN Buddy</h1>
+      What We Do What You Do Your Trainers Reach Out
   </body>
 </html>
