<added content to header>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>  
   <body>
       <!-- navigation -->
-      <h1> RUN Buddy</h1>
+      <h1> RUN BUDDY</h1>
 
       <!-- hero/jumbotron -->
       <section>
