--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Run Buddy</title>
-  </head>  
-  <body>
-      <!-- navigation -->
-      <h1> RUN BUDDY</h1>
 
+<head>
+
+    <meta charset="UTF-8" />
+
+    <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+
+  <header>
+      <!-- navigation -->
+      <h1>
+          <a href="/">RUN BUDDY</a>
+      </h1>
+      <nav>
+          <!-- Unordered list element -->
+        <ul>
+            <!-- List item element-->
+        <li>
+            <!-- Anchor element -->
+            <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+            <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+            <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+            <a href="#reach-out">Reach Out</a>
+        </li>
+        </ul>
+       </nav>
+</header>  
+
+  <body>
       <!-- hero/jumbotron -->
       <section>
       </section>
