--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <!-- Add form element -->
         <form>
             <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your name" name="name" id="name" class="form-input">
+            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
 
             <label for="email">Enter email address:</label>
             <input type="email" placeholder="Email Address" class="form-input">
 
             <label for="phone">Enter a telephone number:</label>
-            <input type="tel" placeholdr="Phone Number" name="phone" id="phone" class="form-input">
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input">
             <p>
                 Have you worked out with a trainer before?
                 <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -153,12 +153,10 @@
           <h2 class="section-title secondary-border">Reach Out</h2>
           <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.010771195047!2d-120.42504984960178!3d37.953534479627834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1652020416643!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-            width="400"
-            height="400"
             style="border: 0;"
             allowfullscreen=""
             loading="lazy">
-            </iframe> 
+            </iframe>
         </div>
 
           <div>
@@ -181,7 +179,7 @@
       <footer>
           <h2>❤️ Made with love by Run Buddy.</h2>
           <div>
-              <a href="#">Read Our Privacy Policy</a><br />
+              <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
               &copy; 2019 Run Buddy, Inc.
           </div>
       </footer>
