--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
 <!-- hero section -->
 <section class="hero">
     <div class="hero-cta">
+        <div class="flex-row">
         <h2>Start Building Habits.</h2>
+        </div>
+        <div class="flex-row">
         <p>
           seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
         </p>
+        </div>
       </div>
     <div class="hero-form">
         <h3>Get Started Today</h3>
@@ -83,16 +87,22 @@
 
       <!-- "what we do" section -->
       <section id="what-we-do" class="intro">
+        <div class="flex-row">
         <h2 class="section-title primary-border">What We Do</h2>
+    </div>
+    <div class="flex-row">
         <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
         </p>
+    </div>
         </section> 
       
       <!-- "what you do" section -->
       <section id="what-you-do" class="steps">
+        <div class="flex-row">
           <h2 class="section-title secondary-border">What You Do</h2>
-
+          </div>
+          
           <div>
             <img src="./assets/images/step-1.svg" alt="" />
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -119,9 +129,11 @@
       </section>    
        <!-- "meet the trainers" section -->
       <section id="your-trainers" class="trainers">
+        <div class="flex-row">
            <h2 class="section-title primary-border">
                Meet The Trainers
             </h2>
+        </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" Alt="Aaron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio text-left">
@@ -155,8 +167,10 @@
       </section>
 
       <!-- "reach out" section -->
-      <section id="reach-out" class="contact"> 
+      <section id="reach-out" class="contact">
+        <div class="flex-row">
           <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
           <div class="contact-info">
               <h3>Contact Us</h3>
               <form>
@@ -196,7 +210,9 @@
       </section>
       <!-- footer -->
       <footer>
+        <div class="flex-row">
           <h2>❤️ Made with love by Run Buddy.</h2>
+        </div>
           <div>
               <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
               &copy; 2019 Run Buddy, Inc.
