add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -135,17 +135,18 @@
               </div>
       </section>    
        <!-- "meet the trainers" section -->
-      <section id="your-trainers" class="trainers">
+      <section id="your-trainers">
         <div class="flex-row">
            <h2 class="section-title primary-border">
                Meet The Trainers
             </h2>
         </div>
+        <div class="trainers">
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" Alt="Aaron Stephens in his workout clothes, ready to pump iron"/>
-                <div class="trainer-bio text-left">
-                    <h3>Aaron Stephens</h3>
-                    <h4>Speed / Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Aaron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
                     <p>
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit labore, velit perferendis iusto quidem assumenda accusantium? Consectetur earum, explicabo voluptatibus quis obcaecati repellendus! Quisquam aut error at repellendus pariatur!
                     </p>
@@ -153,24 +154,25 @@
             </article>
             <!-- second trainer bio -->
             <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nobis exercitationem commodi voluptatem quisquam. Illo eius similique porro explicabo voluptates possimus facere exercitationem debitis nam, harum vitae labore, saepe voluptas!</p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
             </article>
             <!-- third trainer bio -->
             <article class="trainer">
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-life">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt temporibus numquam commodi fugiat iusto fuga, qui, quos fugit cum nostrum. Soluta nulla reprehenderit libero. Magnam fugiat obcaecati voluptatum ab!
                     </p>
                 </div>
             </article>
+        </div>
       </section>
 
       <!-- "reach out" section -->
